2003-06-14  Brian Gough  <bjg@network-theory.co.uk>

	* fp-m68klinux.c fp-ppclinux.c fp-sparclinux.c fp-x86linux.c:
	renamed to fp-gnum68k.c fp-gnuppc.c fp-gnusparc.c fp-gnux86.c
	since they are dependent on the GNU C Library interface rather
	than the kernel interface

	* fp-gnuc99.c: added a fallback to the C99 exception functions for
	cases where the operating system is not recognized

Mon Aug 26 20:57:29 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: use system values for FLT_MIN, FLT_MAX, DBL_MIN, DBL_MAX

Sat May 11 22:30:43 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (TEST_DENORMAL): test denormals only when available, as
 	tested in configure script

Mon Sep 10 14:23:52 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-netbsd.c fp-openbsd.c (gsl_ieee_set_mode): tried to correct
 	the logic for the denormalized exception.

Tue Jul 10 13:10:12 2001  Brian Gough  <bjg@network-theory.co.uk>

	* env.c (gsl_ieee_env_setup): send GSL_IEEE_MODE output to stderr

Tue Jun 26 10:44:13 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-netbsd.c (gsl_ieee_set_mode): simplified, patch from Jason Beegan

	* fp-openbsd.c (gsl_ieee_set_mode): simplified

Mon Jun 25 20:47:33 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-openbsd.c (gsl_ieee_set_mode): added support for openbsd

Tue May  8 10:49:58 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-aix.c: changed macros from TRAP_ to TRP_..

Fri Apr 13 15:07:10 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-darwin.c: added darwin support from Rodney Sparapani

Wed Mar 28 13:12:20 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-netbsd.c: added netbsd support from Jason Beegan
 	<jasontd@indigo.ie>

Thu Mar 15 14:11:29 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-hpux11.c: added support for HPUX11

Fri Mar  2 16:58:36 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-os2emx.c: add ieee support for OS/2 from Henry Sobotka
 	<sobotka@axess.com>
